依存するアプリケーションのインストールを伴わない設定を可能に
git-svn-id: http://192.168.1.101/repos/mozilla/meta-installer@9507 6a2af300-271d-0410-9c6b-d974dc746de0

--- a/config.nsh.sample
+++ b/config.nsh.sample
@@ -27,4 +27,6 @@
 !define FX_ENABLED_SEARCH_PLUGINS  "*"
 !define FX_DISABLED_SEARCH_PLUGINS ""
 
+;!define APP_SKIP_INSTALL
+
 ;===================================================================
