英語版のインストーラに対応
git-svn-id: http://192.168.1.101/repos/mozilla/meta-installer@9581 6a2af300-271d-0410-9c6b-d974dc746de0

--- a/config.nsh.sample
+++ b/config.nsh.sample
@@ -10,6 +10,7 @@
 !define PRODUCT_DOMAIN       "clear-code.com"
 !define PRODUCT_WEB_SITE     "http://www.clear-code.com/"
 !define PRODUCT_WEB_LABEL    "クリアコードのホームページを表示"
+!define PRODUCT_LANGUAGE     "Japanese"
 
 ; NORMAL  : 通常のウィザード
 ; PASSIVE : 確認をすべてスキップする準サイレントインストール
