より古いバージョンのFirefox/Thunderbirdへのダウングレードを可能にした
git-svn-id: http://192.168.1.101/repos/mozilla/meta-installer@12392 6a2af300-271d-0410-9c6b-d974dc746de0

--- a/config.nsh.sample
+++ b/config.nsh.sample
@@ -31,6 +31,8 @@
 ; SKIP   : インストールしない
 !define APP_INSTALL_MODE    "QUIET"
 
+;!define APP_ALLOW_DOWNGRADE
+
 ;!define APP_EXE             "something.exe"
 ;!define APP_KEY             "Vendor\Something"
 
