--- a/config.bat.sample
+++ b/config.bat.sample
@@ -1,4 +1,5 @@
-rem Copyright (C) 2008 ClearCode Inc.
+rem Copyright (C) 2008-2012 ClearCode Inc.
+rem This file must be encoded in Shift_JIS
 
 rem ====================== CUSTOMIZABLE SECTION =======================
 
