--- a/config.nsh.sample
+++ b/config.nsh.sample
@@ -31,6 +31,7 @@
 ;!define APP_EULA_PATH       "\\fileserver\shared\Firefox Setup 15.0.1.txt"
 ;!define APP_EULA_URL        "http://www.mozilla.com/en-US/legal/eula/firefox2-en.txt"
 !define APP_ENABLE_CRASH_REPORT
+;!define DEFAULT_CLIENT      "StartMenuInternet\FIREFOX.EXE"
 
 ; Type of installation of Firefox/Thunderbird itself
 ;  NORMAL : Show full wizard
@@ -58,5 +59,14 @@
 ;              insta
 ;  Otherwise : No alert.
 !define CLEAN_INSTALL ""
+
+;!define FINISH_TITLE   ""
+;!define FINISH_MESSAGE ""
+
+;!define ADMIN_PRIVILEGE_CHECK_DIR ""
+;!define DISABLED_CLIENTS          ""
+;!define INSTALL_ADDONS            ""
+;!define EXTRA_INSTALLERS          ""
+;!define EXTRA_SHORTCUTS           ""
 
 ;===================================================================
