--- a/config.nsh.sample
+++ b/config.nsh.sample
@@ -13,6 +13,9 @@
 !define PRODUCT_WEB_LABEL    "Go to Clear Code Inc."
 !define PRODUCT_LANGUAGE     "Japanese"
 
+!define REQUIRE_ADMIN_PRIVILEGE
+;!define ADMIN_PRIVILEGE_CHECK_DIR ""
+
 ; Type of the wizard
 ;  NORMAL  : Show full wizard
 ;  PASSIVE : Show message dialog but process installation automatically
@@ -21,8 +24,8 @@
 !define PRODUCT_INSTALL_MODE "NORMAL"
 
 !define APP_NAME            "Firefox"
-
-; These can be overridden by fainstall.ini
+;!define APP_EXE             "something.exe"
+;!define APP_KEY             "Vendor\Something"
 !define APP_MIN_VERSION     "3.5"
 !define APP_MAX_VERSION     "99.99"
 ;!define APP_DOWNLOAD_PATH   "\\fileserver\shared\Firefox Setup 15.0.1.exe"
@@ -30,8 +33,10 @@
 ;!define APP_HASH            "8d017402de51a144d0e0fe4d3e2132cb"
 ;!define APP_EULA_PATH       "\\fileserver\shared\Firefox Setup 15.0.1.txt"
 ;!define APP_EULA_URL        "http://www.mozilla.com/en-US/legal/eula/firefox2-en.txt"
+;!define APP_ALLOW_DOWNGRADE
 !define APP_ENABLE_CRASH_REPORT
 ;!define DEFAULT_CLIENT      "StartMenuInternet\FIREFOX.EXE"
+;!define DISABLED_CLIENTS    ""
 
 ; Type of installation of Firefox/Thunderbird itself
 ;  NORMAL : Show full wizard
@@ -39,18 +44,10 @@
 ;  SKIP   : Do not install Firefox/Thunderbird
 !define APP_INSTALL_MODE    "QUIET"
 
-; This can be overridden by fainstall.ini
-;!define APP_ALLOW_DOWNGRADE
-
-;!define APP_EXE             "something.exe"
-;!define APP_KEY             "Vendor\Something"
-
-; These can be overridden by fainstall.ini
 !define FX_ENABLED_SEARCH_PLUGINS  "*"
 !define FX_DISABLED_SEARCH_PLUGINS ""
 
 ; Requirement of a clean environment with no existing profile
-; This can be overridden by fainstall.ini
 ;  REQUIRED  : Requires a clean environment. If there is any existing
 ;              Firefox/Thunderbird profile, then cancels the installation
 ;              process automatically.
@@ -59,14 +56,16 @@
 ;              insta
 ;  Otherwise : No alert.
 !define CLEAN_INSTALL ""
+;!define CLEAN_INSTALL_REQUIRED_TITLE    ""
+;!define CLEAN_INSTALL_REQUIRED_MESSAGE  ""
+;!define CLEAN_INSTALL_PREFERRED_TITLE   ""
+;!define CLEAN_INSTALL_PREFERRED_MESSAGE ""
 
-;!define FINISH_TITLE   ""
-;!define FINISH_MESSAGE ""
-
-;!define ADMIN_PRIVILEGE_CHECK_DIR ""
-;!define DISABLED_CLIENTS          ""
 ;!define INSTALL_ADDONS            ""
 ;!define EXTRA_INSTALLERS          ""
 ;!define EXTRA_SHORTCUTS           ""
+
+;!define FINISH_TITLE   ""
+;!define FINISH_MESSAGE ""
 
 ;===================================================================
