--- a/config.nsh.sample
+++ b/config.nsh.sample
@@ -28,6 +28,7 @@
 ;!define APP_KEY             "Vendor\Something"
 !define APP_MIN_VERSION     "10.0"
 !define APP_MAX_VERSION     "99.99"
+;!define APP_IS_ESR
 ;!define APP_ALLOW_DOWNGRADE
 ;!define APP_DOWNLOAD_PATH   "\\fileserver\shared\Firefox Setup 15.0.1.exe"
 ;!define APP_DOWNLOAD_URL    "http://download.mozilla.org/?product=firefox-15.0.1&os=win&lang=ja"
