--- a/templates/Makefile
+++ b/templates/Makefile
@@ -1,7 +1,7 @@
 all: installer
 
 installer: fainstall/make.sh
-	./fx-meta-installer/scripts/make_installer.sh "EXAMPLE" "addon1" "addon2"
+	./fx-meta-installer/scripts/make_installer.sh "@PROJECT_NAME@" "addon1" "addon2"
 
 fainstall/make.sh:
 	git submodule update --init
