Add support for 64bit version Firefox

--- a/templates/installer-config/fainstall.ini
+++ b/templates/installer-config/fainstall.ini
@@ -3,6 +3,7 @@ AppMinVersion=45.0
 AppMaxVersion=45.99
 DisplayVersion=45.0
 AppEnableCrashReport=false
+;AppIs64bit=false
 ;AppIsESR=true
 ;AppIsDevEdition=true
 
