Add admin privilege check options to the template

--- a/templates/installer-config/fainstall.ini
+++ b/templates/installer-config/fainstall.ini
@@ -6,6 +6,8 @@ AppEnableCrashReport=false
 ;AppIs64bit=false
 ;AppIsESR=true
 ;AppIsDevEdition=true
+;RequireAdminPrivilege=false
+;AdminPrivilegeCheckDirectory=%ProgramFiles%
 
 ;[ADDONFILENAME.xpi]
 ;AddonId=ADDONID@clear-code.com
