--- a/config.nsh.sample
+++ b/config.nsh.sample
@@ -26,7 +26,8 @@
 ;!define APP_KEY             "Vendor\Something"
 !define APP_MIN_VERSION     "102.0"
 !define APP_MAX_VERSION     "102.99"
-;!define APP_IS_ESR          "true"
+!define APP_IS_64BIT        "true"
+!define APP_IS_ESR          "true"
 ;!define APP_IS_DEV_EDITION  "false"
 ;!define APP_ALLOW_DOWNGRADE "true"
 ;!define APP_DOWNLOAD_PATH   "\\fileserver\shared\Firefox Setup 102.0.exe"
